@@ -1,11 +1,15 @@
 package com.example.todo.service;
 
 import com.example.todo.dto.*;
-import com.example.todo.model.Priority;
+import com.example.todo.enums.*;
+import com.example.todo.exception.TodoNotFoundException;
+import com.example.todo.mapper.TodoMapper;
 import com.example.todo.model.Todo;
 import com.example.todo.repository.TodoRepository;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -27,180 +31,201 @@ public class TodoServiceTest {
     @InjectMocks
     private TodoService todoService;
 
-    @Test
-    void testGetTodos() {
-        // Arrange
-        TodoFilter filter = new TodoFilter(null, null, null);
-        List<Todo> todos = Arrays.asList(
-                new Todo("Todo 1", Priority.LOW),
-                new Todo("Todo 2", Priority.HIGH),
-                new Todo("Todo 3", Priority.MEDIUM),
-                new Todo("Todo 4", Priority.LOW));
+    @Nested
+    public class GetTodosTests {
+        
+        private static List<Todo> todos;
+        
+        @BeforeAll
+        static void setup() {
+            todos = List.of(
+                    new Todo("Alpha project planning", Priority.MEDIUM, LocalDateTime.now().plusDays(3)),
+                    new Todo("Buy groceries", Priority.LOW, LocalDateTime.now().plusDays(1)),
+                    new Todo("Complete report", Priority.HIGH, LocalDateTime.now().plusDays(2)),
+                    new Todo("Draft email to team", Priority.MEDIUM, LocalDateTime.now().plusDays(5)),
+                    new Todo("Exercise for 30 minutes", Priority.MEDIUM, null),
+                    new Todo("Fix broken pipeline", Priority.HIGH, LocalDateTime.now().plusHours(6)),
+                    new Todo("Gather feedback from stakeholders", Priority.MEDIUM, LocalDateTime.now().plusDays(4)),
+                    new Todo("Host meeting", Priority.MEDIUM, null),
+                    new Todo("Improve UI design", Priority.LOW, LocalDateTime.now().plusDays(7)),
+                    new Todo("Join coding workshop", Priority.MEDIUM, LocalDateTime.now().plusDays(3)),
+                    new Todo("Kickoff new marketing campaign", Priority.HIGH, LocalDateTime.now().plusDays(1)),
+                    new Todo("Learn Spring Boot basics", Priority.LOW, null),
+                    new Todo("Manage team assignment", Priority.MEDIUM, LocalDateTime.now().plusDays(10)),
+                    new Todo("Notify users about changes", Priority.MEDIUM, LocalDateTime.now().plusDays(5)),
+                    new Todo("Organize desk space", Priority.LOW, null),
+                    new Todo("Plan upcoming sprints", Priority.MEDIUM, LocalDateTime.now().plusDays(2)),
+                    new Todo("Quick bug fix", Priority.HIGH, LocalDateTime.now().plusHours(3)),
+                    new Todo("Review pull request", Priority.MEDIUM, LocalDateTime.now().plusHours(12)),
+                    new Todo("Schedule team outing", Priority.LOW, LocalDateTime.now().plusDays(14)),
+                    new Todo("Test new feature deployment", Priority.HIGH, LocalDateTime.now().plusHours(24)),
+                    new Todo("Update documentation", Priority.MEDIUM, LocalDateTime.now().plusDays(3)),
+                    new Todo("Write monthly newsletter", Priority.LOW, LocalDateTime.now().plusDays(9)),
+                    new Todo("Xerox meeting agenda", Priority.LOW, LocalDateTime.now().plusHours(5)),
+                    new Todo("Verify backup status", Priority.MEDIUM, LocalDateTime.now().plusDays(2)),
+                    new Todo("Year-end performance reviews", Priority.MEDIUM, LocalDateTime.now().plusDays(6)),
+                    new Todo("Zoom conference call", Priority.MEDIUM, LocalDateTime.now().plusDays(4)),
+                    new Todo("Analyze new requirements", Priority.HIGH, LocalDateTime.now().plusHours(8)),
+                    new Todo("Back up project files", Priority.LOW, null),
+                    new Todo("Create presentation slides", Priority.MEDIUM, LocalDateTime.now().plusDays(3)),
+                    new Todo("Deploy production build", Priority.HIGH, LocalDateTime.now().plusHours(18))
+            );
 
-        when(todoRepository.findAll()).thenReturn(todos);
+            todos.get(1).setDone(true);
+            todos.get(4).setDone(true);
+            todos.get(7).setDone(true);
+            todos.get(12).setDone(true);
+            todos.get(19).setDone(true);
+            todos.get(24).setDone(true);
+            todos.get(25).setDone(true);
+        }
 
-        // Act
-        PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(filter, 1, 2);
+        @ParameterizedTest
+        @CsvSource({
+                "1, 2, 2, 15",
+                "3, 2, 2, 15",
+                "8, 4, 2, 8",
+                "9, 1, 1, 30",
+                "3, 9, 9, 4",
+                "10, 5, 0, 6",
+                "3, 12, 6, 3",
+                "1, 50, 30, 1"
+        })
+        void testPaginationResults(int page, int pageSize, int todosOnPage, int totalPages) {
+            // Arrange
+            when(todoRepository.findAll()).thenReturn(todos);
 
-        // Assert
-        assertEquals(1, pageResponse.getCurrentPage());
-        assertEquals(2, pageResponse.getPageSize());
-        assertEquals(2, pageResponse.getContent().size());
-        assertEquals(4, pageResponse.getTotalItems());
+            // Act
+            PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(
+                    null, null, null, page, pageSize, SortCriteria.TEXT, SortOrder.ASC);
 
-        assertEquals("Todo 1", pageResponse.getContent().getFirst().getText());
-        assertEquals("Todo 2", pageResponse.getContent().getLast().getText());
+            // Assert
+            assertEquals(page, pageResponse.getCurrentPage());
+            assertEquals(pageSize, pageResponse.getPageSize());
+            assertEquals(totalPages, pageResponse.getTotalPages());
+            assertEquals(todosOnPage, pageResponse.getContent().size());
 
-        verify(todoRepository, times(1)).findAll();
-    }
+            verify(todoRepository, times(1)).findAll();
+        }
 
-    @Test
-    void testGetTodos_FilterByPriority() {
-        // Arrange
-        TodoFilter filter = new TodoFilter(null, Priority.LOW, null);
-        List<Todo> todos = Arrays.asList(
-                new Todo("Todo 1", Priority.LOW),
-                new Todo("Todo 2", Priority.HIGH),
-                new Todo("Todo 3", Priority.MEDIUM),
-                new Todo("Todo 4", Priority.LOW));
+        @ParameterizedTest
+        @CsvSource({
+                "TEAM, 3",
+                "x, 4",
+                " , 30",
+                ", 30",
+                "a long text that is not in any todo, 0",
+                "A, 19",
+                "back, 3",
+                "e r, 2"
+        })
+        void testFilterByText(String text, int expectedResults) {
+            // Arrange
+            when(todoRepository.findAll()).thenReturn(todos);
 
-        when(todoRepository.findAll()).thenReturn(todos);
+            // Act
+            PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(text, null, null, 1, 30, SortCriteria.TEXT, SortOrder.ASC);
+            boolean allTodosContainText = pageResponse.getContent().stream()
+                    .allMatch(todo -> text == null || todo.getText().toLowerCase().contains(text.toLowerCase()));
 
-        // Act
-        PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(filter, 1, 2);
+            // Assert
+            assertTrue(allTodosContainText);
+            assertEquals(expectedResults, pageResponse.getContent().size());
+        }
 
-        // Assert
-        assertEquals(1, pageResponse.getCurrentPage());
-        assertEquals(2, pageResponse.getPageSize());
-        assertEquals(1, pageResponse.getTotalPages());
-        assertEquals(2, pageResponse.getContent().size());
-        assertEquals(2, pageResponse.getTotalItems());
+        @ParameterizedTest
+        @CsvSource({"LOW, 8", "MEDIUM, 15", "HIGH, 7"})
+        void testFilterByPriority(Priority priority, int expectedResults) {
+            // Arrange
+            when(todoRepository.findAll()).thenReturn(todos);
 
-        assertEquals("Todo 1", pageResponse.getContent().getFirst().getText());
-        assertEquals("Todo 4", pageResponse.getContent().getLast().getText());
+            // Act
+            PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(null, priority, null, 1, 30, SortCriteria.TEXT, SortOrder.ASC);
+            boolean allPrioritiesMatch = pageResponse.getContent().stream()
+                    .allMatch(todo -> todo.getPriority() == priority);
 
-        assertEquals(Priority.LOW, pageResponse.getFilter().getPriority());
+            // Assert
+            assertTrue(allPrioritiesMatch);
+            assertEquals(expectedResults, pageResponse.getContent().size());
+        }
 
-        verify(todoRepository, times(1)).findAll();
-    }
+        @ParameterizedTest
+        @CsvSource({"true, 7", "false, 23"})
+        void testFilterByDone(Boolean done, int expectedResults) {
+            // Arrange
+            when(todoRepository.findAll()).thenReturn(todos);
 
-    @Test
-    void testGetTodos_FilterByName() {
-        // Arrange
-        TodoFilter filter = new TodoFilter("TH", null, null);
-        List<Todo> todos = Arrays.asList(
-                new Todo("First Todo", Priority.LOW),
-                new Todo("The second todo", Priority.HIGH),
-                new Todo("Third one", Priority.MEDIUM),
-                new Todo("Fourth todo", Priority.LOW));
+            // Act
+            PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(null, null, done, 1, 30, SortCriteria.TEXT, SortOrder.ASC);
+            boolean allStatusesMatch = pageResponse.getContent().stream()
+                    .allMatch(todo -> done.equals(todo.isDone()));
 
-        when(todoRepository.findAll()).thenReturn(todos);
+            // Assert
+            assertTrue(allStatusesMatch);
+            assertEquals(expectedResults, pageResponse.getContent().size());
+        }
 
-        // Act
-        PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(filter, 1, 2);
+        @ParameterizedTest
+        @CsvSource({
+                "ep, HIGH, ,3",
+                ", LOW, true, 1",
+                ", MEDIUM, true, 5",
+                ", HIGH, true, 1",
+                "for, ,true, 2",
+                "me, MEDIUM, true, 2",
+                "c, , true, 4",
+                "a, MEDIUM, , 11",
+                ", LOW, false, 7",
+                ", MEDIUM, false, 10",
+                ", HIGH, false, 6",
+                "new, HIGH, , 3",
+                "work, , , 1",
+                "work, LOW, , 0"
+        })
+        void testFilterByMultipleOptions(String text, Priority priority, Boolean done, int expectedResults) {
+            // Arrange
+            when(todoRepository.findAll()).thenReturn(todos);
 
-        // Assert
-        assertEquals(2, pageResponse.getPageSize());
-        assertEquals(3, pageResponse.getTotalItems());
+            // Act
+            PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(text, priority, done, 1, 30, SortCriteria.TEXT, SortOrder.ASC);
 
-        assertEquals("The second todo", pageResponse.getContent().getFirst().getText());
-        assertEquals("Third one", pageResponse.getContent().getLast().getText());
+            boolean allAttributesMatch = pageResponse.getContent().stream()
+                    .allMatch(todo ->
+                            (text == null || todo.getText().toLowerCase().contains(text.toLowerCase())) &&
+                            (priority == null || todo.getPriority() == priority) &&
+                            (done == null || done.equals(todo.isDone())));
 
-        assertEquals("th", pageResponse.getFilter().getName());
+            // Assert
+            assertTrue(allAttributesMatch);
+            assertEquals(expectedResults, pageResponse.getContent().size());
+        }
 
-        verify(todoRepository, times(1)).findAll();
-    }
+        @ParameterizedTest
+        @CsvSource({
+                "TEXT, ASC, Alpha project planning",
+                "TEXT, DESC, Zoom conference call",
+                "PRIORITY, ASC, Xerox meeting agenda",
+                "PRIORITY, DESC, Quick bug fix",
+                "DUE_DATE, ASC, Quick bug fix",
+                "DUE_DATE, DESC, Exercise for 30 minutes"
+        })
+        void testSortingPaginationResults(SortCriteria sortBy, SortOrder order, String textExpectedFirst) {
+            // Arrange
+            when(todoRepository.findAll()).thenReturn(todos);
 
-    @Test
-    void testGetTodos_FilterByDone() {
-        // Arrange
-        TodoFilter filter = new TodoFilter(null, null, true);
-        List<Todo> todos = Arrays.asList(
-                new Todo("Todo 1", Priority.LOW),
-                new Todo("Todo 2", Priority.HIGH),
-                new Todo("Todo 3", Priority.MEDIUM),
-                new Todo("Todo 4", Priority.LOW));
+            // Act
+            PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(null, null, null, 1, 30, sortBy, order);
 
-        todos.get(2).setDone(true);
-        when(todoRepository.findAll()).thenReturn(todos);
-
-        // Act
-        PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(filter, 1, 2);
-
-        // Assert
-        assertEquals(1, pageResponse.getTotalPages());
-        assertEquals(1, pageResponse.getTotalItems());
-
-        assertEquals("Todo 3", pageResponse.getContent().getFirst().getText());
-
-        assertTrue(pageResponse.getFilter().getDone());
-
-        verify(todoRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGetTodos_FilterByNameAndPriority() {
-        // Arrange
-        TodoFilter filter = new TodoFilter("a", Priority.MEDIUM, null);
-        List<Todo> todos = Arrays.asList(
-                new Todo("Todo ABC", Priority.LOW),
-                new Todo("Todo DFG", Priority.HIGH),
-                new Todo("Todo JGF", Priority.MEDIUM),
-                new Todo("Todo AAA", Priority.LOW),
-                new Todo("Todo FJR", Priority.HIGH),
-                new Todo("Todo EDA", Priority.MEDIUM),
-                new Todo("Todo YQA", Priority.MEDIUM),
-                new Todo("Todo AAA", Priority.LOW));
-
-        when(todoRepository.findAll()).thenReturn(todos);
-
-        // Act
-        PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(filter, 2, 1);
-
-        // Assert
-        assertEquals(2, pageResponse.getTotalPages());
-        assertEquals(2, pageResponse.getTotalItems());
-
-        assertEquals("Todo YQA", pageResponse.getContent().getFirst().getText());
-
-        assertEquals("a", pageResponse.getFilter().getName());
-        assertEquals(Priority.MEDIUM, pageResponse.getFilter().getPriority());
-
-        verify(todoRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGetTodos_NoResultsForLargePageNumber() {
-        // Arrange
-        TodoFilter filter = new TodoFilter("O", null, null);
-        List<Todo> todos = Arrays.asList(
-                new Todo("Todo ABC", Priority.LOW),
-                new Todo("Todo DFG", Priority.HIGH),
-                new Todo("Todo JGF", Priority.MEDIUM),
-                new Todo("Todo AAA", Priority.LOW),
-                new Todo("Todo FJR", Priority.HIGH),
-                new Todo("Todo EDA", Priority.MEDIUM),
-                new Todo("Todo YQA", Priority.MEDIUM),
-                new Todo("Todo AAA", Priority.LOW));
-
-        when(todoRepository.findAll()).thenReturn(todos);
-
-        // Act
-        PaginatedResponse<TodoResponse> pageResponse = todoService.getTodos(filter, 5, 3);
-
-        // Assert
-        assertEquals(5, pageResponse.getCurrentPage());
-        assertEquals(8, pageResponse.getTotalItems());
-        assertEquals(0, pageResponse.getContent().size());
-
-        verify(todoRepository, times(1)).findAll();
+            // Assert
+            assertEquals(textExpectedFirst, pageResponse.getContent().getFirst().getText());
+        }
     }
 
     @Test
     void testCreateTodo() {
         // Arrange
         Todo todo = new Todo("Created todo", Priority.LOW);
-        CreateTodoRequest todoRequest = new CreateTodoRequest("Created todo", Priority.LOW, null);
+        CreateTodoRequest todoRequest = TodoMapper.toCreateTodoRequest(todo);
         when(todoRepository.save(any(Todo.class))).thenReturn(todo);
 
         // Act
@@ -214,8 +239,11 @@ public class TodoServiceTest {
     @Test
     void testUpdateTodo() {
         // Arrange
-        Todo todo = new Todo("New todo", Priority.MEDIUM);
-        todo.setId(1L);
+        Todo todo = Todo.builder()
+                .id(1L)
+                .text("New todo")
+                .priority(Priority.MEDIUM)
+                .build();
 
         when(todoRepository.findById(1L)).thenReturn(Optional.of(todo));
         when(todoRepository.save(any(Todo.class))).thenReturn(todo);
@@ -233,20 +261,21 @@ public class TodoServiceTest {
     void testUpdateTodo_TodoNotFound() {
         // Arrange
         when(todoRepository.findById(1L)).thenReturn(Optional.empty());
+        UpdateTodoRequest updateTodoRequest = new UpdateTodoRequest("Updated text", Priority.LOW, LocalDateTime.now());
 
-        // Act
-        TodoResponse updatedTodo = todoService.updateTodo(1L, new UpdateTodoRequest("Updated text", Priority.LOW, LocalDateTime.now()));
-
-        // Assert
-        assertNull(updatedTodo);
+        // Act & Assert
+        assertThrows(TodoNotFoundException.class, () -> todoService.updateTodo( 1L, updateTodoRequest));
         verify(todoRepository, times(1)).findById(1L);
     }
 
     @Test
     void testMarkAsDone() {
         // Arrange
-        Todo newTodo = new Todo("Todo", Priority.HIGH);
-        newTodo.setId(1L);
+        Todo newTodo = Todo.builder()
+                .id(1L)
+                .text("Todo")
+                .priority(Priority.HIGH)
+                .build();
 
         when(todoRepository.findById(1L)).thenReturn(Optional.of(newTodo));
 
@@ -262,10 +291,13 @@ public class TodoServiceTest {
     @Test
     void testMarkAsUndone() {
         // Arrange
-        Todo completedTodo = new Todo("Todo", Priority.LOW);
-        completedTodo.setId(1L);
-        completedTodo.setDone(true);
-        completedTodo.setDoneDate(LocalDateTime.of(2025, 2, 10, 0, 0));
+        Todo completedTodo = Todo.builder()
+                .id(1L)
+                .text("Todo")
+                .priority(Priority.LOW)
+                .isDone(true)
+                .doneDate(LocalDateTime.of(2025, 2, 10, 0, 0))
+                .build();
 
         when(todoRepository.findById(1L)).thenReturn(Optional.of(completedTodo));
 
@@ -282,34 +314,45 @@ public class TodoServiceTest {
     void testGetAverageCompletionTime() {
         // Arrange
         List<Todo> todos = Arrays.asList(
-                new Todo("Todo 1", Priority.LOW),
-                new Todo("Todo 2", Priority.HIGH),
-                new Todo("Todo 3", Priority.MEDIUM),
-                new Todo("Todo 4", Priority.LOW));
-
-        todos.getFirst().setDone(true);
-        todos.getFirst().setCreatedAt(LocalDateTime.of(2025, 2, 10, 0, 0, 2));
-        todos.getFirst().setDoneDate(todos.getFirst().getCreatedAt().plusSeconds(4000));
-
-        todos.get(1).setDone(true);
-        todos.get(1).setCreatedAt(LocalDateTime.of(2025, 1, 17, 5, 32, 2));
-        todos.get(1).setDoneDate(todos.get(1).getCreatedAt().plusSeconds(231420));
-
-        todos.get(2).setDone(true);
-        todos.get(2).setCreatedAt(LocalDateTime.of(2024, 9, 14, 18, 21, 58));
-        todos.get(2).setDoneDate(todos.get(2).getCreatedAt().plusSeconds(65324));
-
-        todos.get(3).setDone(true);
-        todos.get(3).setCreatedAt(LocalDateTime.of(2024, 3, 28, 12, 9, 7, 129));
-        todos.get(3).setDoneDate(todos.get(3).getCreatedAt().plusSeconds(55555));
+                Todo.builder()
+                        .text("Todo 1")
+                        .priority(Priority.LOW)
+                        .isDone(true)
+                        .createdAt(LocalDateTime.of(2025, 2, 10, 0, 0, 2))
+                        .doneDate(LocalDateTime.of(2025, 2, 10, 0, 0, 2).plusSeconds(4000))
+                        .build(),
+                Todo.builder()
+                        .text("Todo 2")
+                        .priority(Priority.HIGH)
+                        .isDone(true)
+                        .createdAt(LocalDateTime.of(2025, 1, 17, 5, 32, 2))
+                        .doneDate(LocalDateTime.of(2025, 1, 17, 5, 32, 2).plusSeconds(231420))
+                        .build(),
+                Todo.builder()
+                        .text("Todo 2")
+                        .priority(Priority.MEDIUM)
+                        .isDone(true)
+                        .createdAt(LocalDateTime.of(2024, 9, 14, 18, 21, 58))
+                        .doneDate(LocalDateTime.of(2024, 9, 14, 18, 21, 58).plusSeconds(65324))
+                        .build(),
+                Todo.builder()
+                        .text("Todo 4")
+                        .priority(Priority.LOW)
+                        .isDone(true)
+                        .createdAt(LocalDateTime.of(2024, 3, 28, 12, 9, 7, 129))
+                        .doneDate(LocalDateTime.of(2024, 3, 28, 12, 9, 7, 129).plusSeconds(55555))
+                        .build());
 
         when(todoRepository.findAll()).thenReturn(todos);
 
         // Act
-        long avgCompletionTime = todoService.getAverageCompletionTime();
+        MetricsResponse metrics = todoService.getMetrics();
 
         // Assert
-        assertEquals((long) 4000 + 231420 + 65324 + 55555, avgCompletionTime);
-        verify(todoRepository, times(1)).findAll();
+        assertEquals(Math.round((double) (4000 + 231420 + 65324 + 55555) / 4), metrics.getAvgTime());
+        assertEquals(Math.round((double) (4000 + 55555) / 2), metrics.getAvgTimeLow());
+        assertEquals(65324L, metrics.getAvgTimeMedium());
+        assertEquals(231420L, metrics.getAvgTimeHigh());
+        verify(todoRepository, times(4)).findAll();
     }
 }
